JavaScript updated to show temp, wind, humidity, & UV Index of static city. HTML selectors updated.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,10 @@ main {
     float: right;
 }
 
+li {
+    list-style: none;
+}
+
 .fiveDayForecast {
     border: 2px solid var(--darkBlue);
     background-color: var(--darkBlue);
