--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,11 @@ li {
     list-style: none;
 }
 
+.icon {
+    height: 40px;
+    width: 50px;
+}
+
 .fiveDayForecast {
     border: 2px solid var(--darkBlue);
     background-color: var(--darkBlue);
