All javaScript should be written minus minor changes. Added uv index color, and the date time.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,11 @@ li {
     border: 2px solid var(--darkBlue);
     background-color: var(--darkBlue);
     color: var(--grayBlue);
-    width: 100px;
+    width: 125px;
     height: 125px;
     margin: 25px;
+}
+
+#uvIndex {
+    border-radius: 10px;
 }
