--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    
+    flex-direction: column;
 }
 
 header {
@@ -17,15 +17,49 @@ header {
 }
 
 aside {
+    flex: 2;
+    flex-direction: column;
     float: left;
+    height: 100%;
 }
 
-main {
-    float: right;
+aside h1 {
+    margin-left: 10px;
+}
+
+div h2 {
+    margin-left: 25px;
+}
+
+form {
+    margin: 2px 10px;
+}
+
+hr {
+    margin: 5px 10px;
+    height: 1px;
+    background-color: darkgray;
 }
 
 li {
     list-style: none;
+}
+
+main {
+    flex: 5;
+    flex-direction: column;
+    float: right;
+    height: 100%;
+}
+
+.flexRow {
+    display: flex;
+    flex-direction: row;
+}
+
+.flexColumn {
+    display: flex;
+    flex-direction: column;
 }
 
 .icon {
@@ -42,6 +76,33 @@ li {
     margin: 25px;
 }
 
+.historyBtn {
+    width: 100%;
+    background-color: darkgray;
+    text-transform: capitalize;
+    margin-top: 3px;
+}
+
+#mainDiv {
+    flex-direction: row;
+    justify-content: flex-start;
+}
+
+#query {
+    height: 1.75em;
+}
+
+#searchBtn {
+    margin-top: 10px;
+    background-color: var(--lightBlue);
+}
+
+#searchHistory {
+    justify-content: center;
+    margin: 2px 10px;
+}
+
 #uvIndex {
     border-radius: 10px;
+    padding: 2px 5px;
 }
